--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a
 
 # Authors
 authors:
-  sal:
+  Lidiane:
     name: Lidiane
     display_name: "Lidiane Vasconcelos"
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
+    email: lidi.vasconcelos@gmail.com
+    web: https://www.trololodemulher.com.br
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
 
