--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: "Trololo de Mulher"
-description: "JTrololo de Mulher"
+description: "Trololo de Mulher"
 meta_description: "Trololo de Mulher"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
