--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,25 @@ authors:
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
 
+  sal:
+    name: Lidiane
+    display_name: "Lidiane Vasconcelos"
+    gravatar: 94e312457714a8b53f0348c17f5f79b4
+    email: lidi.vasconcelos@gmail.com
+    web: https://www.trololodemulher.com.br
+    twitter: https://twitter.com/wowthemesnet
+    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+
+  john:
+    name: Lidiane
+    display_name: "Lidiane Vasconcelos"
+    gravatar: 94e312457714a8b53f0348c17f5f79b4
+    email: lidi.vasconcelos@gmail.com
+    web: https://www.trololodemulher.com.br
+    twitter: https://twitter.com/wowthemesnet
+    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+
+
 # Plugins
 plugins:
   - jekyll-paginate
