--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ authors:
     name: Lidiane
     display_name: "Lidiane Vasconcelos"
     gravatar: 94e312457714a8b53f0348c17f5f79b4
-    email: lidi.vasconcelos@gmail.com
+    email: trololomulher@gmail.com
     web: https://www.trololodemulher.com.br
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
@@ -24,7 +24,7 @@ authors:
     name: Lidiane
     display_name: "Lidiane Vasconcelos"
     gravatar: 94e312457714a8b53f0348c17f5f79b4
-    email: lidi.vasconcelos@gmail.com
+    email: trololomulher@gmail.com
     web: https://www.trololodemulher.com.br
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
@@ -33,7 +33,7 @@ authors:
     name: Lidiane
     display_name: "Lidiane Vasconcelos"
     gravatar: 94e312457714a8b53f0348c17f5f79b4
-    email: lidi.vasconcelos@gmail.com
+    email: trololomulher@gmail.com
     web: https://www.trololodemulher.com.br
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
