--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 name: "Trololo de Mulher"
 description: "Trololo de Mulher"
 meta_description: "Trololo de Mulher"
+content_lang: "pt-br"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
