--- a/_config.yml
+++ b/_config.yml
@@ -62,3 +62,14 @@ markdown: kramdown
 highlighter: rouge
 
 include: ['_pages']
+
+
+
+# List of links in the navigation bar
+navbar-links:
+  About Me: "aboutme"
+  Resources:
+    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+    - Learn markdown: "http://www.markdowntutorial.com/"
+    - GitHub Pages: "https://pages.github.com/"
+  Author's home: "http://deanattali.com"
