--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ baseurl: /
 google_analytics: 'UA-11722414-61'
 disqus: 'trololodemulher'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a6b2fe4fb197a0011c589f6&product=sticky-share-buttons"></script>'
 
 # Authors
 authors:
