--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-name: "Trololo de Mulher"
-description: "Trololo de Mulher"
-meta_description: "Trololo de Mulher"
+name: "T Mulher"
+description: "T Mulher"
+meta_description: "T Mulher"
 content_lang: "pt-br"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
