--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-name: "Trololó Mulher"
-description: "Trololó Mulher"
-meta_description: "Trololó Mulher"
+name: "Trololó de Mulher"
+description: "Trololó de Mulher"
+meta_description: "Trololó de Mulher"
 content_lang: "pt-br"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
