--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -7,6 +7,7 @@ sections:
 - type: jekyll-pages
   label: Pages
   create: all
+  path: "/_pages"
 - type: jekyll-posts
   label: Posts
   create: all
