--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,9 @@
----
-Lidiane:
-  name: Lidiane Vasconcelos
-  email: Lidi.Vasconcelos@gmail.com
-  web: http://Lidiane-Vasconcelos.github.io
-  image: http://Lidiane-Vasconcelos.github.io/foto.jpg
+  Lidiane:
+    name: Lidiane Vasconcelos
+    display_name: "Lidiane Vasconcelos"
+    gravatar: 94e312457714a8b53f0348c17f5f79b4
+    email: trololomulher@gmail.com
+    web: https://www.trololodemulher.com.br
+    image: http://Lidiane-Vasconcelos.github.io/foto.jpg    
+    twitter: https://twitter.com/TrololodeMulher
+    description: "--"
