--- a/.forestry/front_matter/templates/trololo.yml
+++ b/.forestry/front_matter/templates/trololo.yml
@@ -14,8 +14,8 @@ fields:
   label: Autora
   default: Lidiane
 - type: text
-  name: description
-  label: Descrição para SEO (max 120 caracteres)
+  name: meta_description
+  label: Meta Descrição para SEO (max 120 caracteres)
   description: ''
   default: ''
 - type: boolean
@@ -32,29 +32,13 @@ fields:
 - type: tag_list
   name: categories
   label: Categorias
-- type: text
-  label: Título no Facebook
-  name: facebook_title
-  description: Se você não desejar usar o título do post ao compartilha-lo no Facebook
-    e preferir usar outro título, insira-o aqui.
-- type: text
-  name: facebook_description
-  label: Descrição no Facebook
-  description: Se você não deseja utilizar a meta descrição para compartilhamento
-    do tópico no Facebook, mas, deseja utilizar outra descrição, insira-a aqui.
 - type: file
   label: Imagem no Facebook
   name: facebook_image
   description: Se você não desejar usar a imagem do post. O tamanho recomendado para
-    a imagem Facebook é 1200 por 630px.
-- type: text
-  label: Título no Twitter
-  name: twitter_title
-- type: text
-  label: Descrição no Twitter
-  name: twitter_description
+    a imagem Facebook é 1200(H) por 630(V) px.
 - type: file
-  description: O tamanho recomendado para a imagem Twitter é 1024 por 512px.
+  description: O tamanho minímo recomendado para a imagem Twitter é 440(H) x 220(V) (2:1 Ratio) ou 1024 x 512 .
   label: Imagem no Twitter
   name: twitter_image
 pages:
