--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,3 +7,7 @@
     image: http://Lidiane-Vasconcelos.github.io/foto.jpg    
     twitter: https://twitter.com/TrololodeMulher
     description: "--"
+
+Google +
+http://www.google.com/profiles/112795712529273089482
+https://plus.google.com/+LidianeVasconcelosTMDC
