--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ authors:
 plugins:
   - jekyll-paginate
   - jekyll-archives
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
+#  - jekyll-feed
+#  - jekyll-seo-tag
+#  - jekyll-sitemap
   - jekyll-include-cache  
   
 # - jekyll-mentions  
