--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,9 @@ plugins:
   - jekyll-paginate
   - jekyll-archives
   - jekyll-include-cache  
-
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 
 # Archives
