--- a/_config.yml
+++ b/_config.yml
@@ -85,3 +85,6 @@ facebook:
   app_id:
 twitter:
   username:  TrololoMulher
+google:
+  googleplus_code: 112795712529273089482
+  googleplus_id: +LidianeVasconcelosTMDC
