--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 #=============================================
-name: "Trololó de Mulher"
+title: "Trololó de Mulher"
 description: "Trololó de Mulher"
 meta_description: "Trololó de Mulher"
 content_lang: "pt-br"
