--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
 - title: Sobre
   url: /about.html
 - title: Projeto Lar Bonito Lar
-  url: /_pages/Projeto-Lar-Bonito-Lar
+  url: /Projeto-Lar-Bonito-Lar
