--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ page_permalink: /:title
 
 # Verification Tokens:
 #=============================================
-google_verify:
+google_verify: 6GcW4Xv_-zM0VrPiBFV6ZbRiBxTFqnqCKss0FhVpgQk
 yandex_verify:
-bing_verify:
+bing_verify: 9364933C71A3EB51D875FC6DAAC58033
 alexa_verify:
 pinterest_verify:
 norton_verify:
