--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ page_permalink: /:title
 # Verification Tokens:
 #=============================================
 google_verify: 6GcW4Xv_-zM0VrPiBFV6ZbRiBxTFqnqCKss0FhVpgQk
-yandex_verify:
+yandex_verify: d4297441f24b3cef
 bing_verify: 9364933C71A3EB51D875FC6DAAC58033
 alexa_verify:
 pinterest_verify:
