--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ plugins:
   - jekyll-paginate
   - jekyll-archives
   - jekyll-include-cache  
-  - jekyll-feed
-  - jekyll-sitemap
+#  - jekyll-feed
+#  - jekyll-sitemap
 
 
 # Archives
