--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ page_permalink: /:title
 google_verify: 6GcW4Xv_-zM0VrPiBFV6ZbRiBxTFqnqCKss0FhVpgQk
 yandex_verify: d4297441f24b3cef
 bing_verify: 9364933C71A3EB51D875FC6DAAC58033
-pinterest_verify:
+pinterest_verify: b67c53ad4b8f419348c53d1a41256265
 
 #Social Media
 #=============================================
