--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ pinterest_verify: b67c53ad4b8f419348c53d1a41256265
 #Social Media
 #=============================================
 facebook:
-  admins:
+  admins: lidiane.vasconcelos.94
   publisher: TrololoMulher
-  app_id:
+  app_id: 716605308724809
 twitter:
   username:  TrololoMulher
 google:
