--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: /
 google_analytics: 'UA-11722414-61'
 disqus: 'trololodemulher'
 mailchimp-list: 'https://'
-sharethis: '<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5bf83305a0286b00115a8d0d&product=sticky-share-buttons' async='async'></script>'
+sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5bf83305a0286b00115a8d0d&product=sticky-share-buttons" async="async"></script>'
 enable_jumbotron_header: false
 enable_jumbotron_footer: false
 enable_alertbar: false
