--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,6 @@
 - title: Sobre
   url: /about.html
+- title: Newsletter
+  url: /Newsletter/  
 - title: Projeto Lar Bonito Lar
   url: /Projeto-Lar-Bonito-Lar
