--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,11 @@ title: "Trololó de Mulher"
 description: "Trololó de Mulher"
 meta_description: "Trololó de Mulher"
 content_lang: "pt-br"
-#logo: 'assets/images/logo.png'
+logo: 'assets/images/favicon/favicon-194x194.png?v=2'
 #favicon: 'assets/images/logo.png'
 baseurl: /
 google_analytics: 'UA-11722414-61'
 disqus: 'trololodemulher'
-mailchimp-list: 'https://'
 sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5bf83305a0286b00115a8d0d&product=sticky-share-buttons" async="async"></script>'
 enable_jumbotron_header: false
 enable_jumbotron_footer: false
