--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: "Trololó de Mulher"
 description: "Trololó de Mulher"
 meta_description: "Trololó de Mulher"
-content_lang: "pt-br"
+content_lang: "pt-BR"
 logo: '/assets/images/favicon/favicon-32x32.png?v=2'
 #favicon: 'assets/images/logo.png'
 baseurl: /
