--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,5 @@
   url: /Newsletter/  
 - title: Projeto Lar Bonito Lar
   url: /Projeto-Lar-Bonito-Lar
+- title: Projeto Bem Viver Organizada
+  url: /Projeto-Bem-Viver-Organizada
