--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
     display_name: "Lidiane Vasconcelos"
     description: "--"    
     email: trololomulher@gmail.com
-    web: https://www.trololodemulher.com.br
+    web: https://www.lidianevasconcelos.com
     twitter: TrololodeMulher
     facebook: lidiane.vasconcelos.94
     googleplus_code: 112795712529273089482
