--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
     display_name: "Lidiane Vasconcelos"
     gravatar: 94e312457714a8b53f0348c17f5f79b4
     email: trololomulher@gmail.com
-    web: https://www.trololodemulher.com.br
+    web: https://www.lidianevasconcelos.com
     image: http://Lidiane-Vasconcelos.github.io/foto.jpg    
     twitter: https://twitter.com/TrololodeMulher
     description: "--"
