--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 - title: Sobre Mim
   url: /about.html
 - title: Newsletter
-  url: /Newsletter/  
+  url: /Newsletter/
+- title: Ebook
+  url: https://hotm.art/AiEYQB   
 - title: Projeto Lar Bonito Lar
   url: /Projeto-Lar-Bonito-Lar
 - title: Projeto Bem Viver Organizada
