--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@
 - title: Newsletter
   url: /Newsletter/
 - title: Ebook
-  url: https://hotm.art/AiEYQB   
+  url: https://hotm.art/arDfFm   
 - title: Projeto Lar Bonito Lar
   url: /Projeto-Lar-Bonito-Lar
 - title: Projeto Bem Viver Organizada
